Fix z-index ordering for selected nodes in wire-editor

--- a/artifacts/wire-ui/src/components/Node/Node.scss
+++ b/artifacts/wire-ui/src/components/Node/Node.scss
@@ -12,6 +12,10 @@
     z-index: 9;
     user-select: none;
 
+    &.selected {
+        z-index: 19;
+    }
+
     @import './NodeHandle';
     @import './NodeContent';
 }
